--- a/plugin.xml
+++ b/plugin.xml
@@ -23,7 +23,7 @@
     xmlns:rim="http://www.blackberry.com/ns/widgets"
     xmlns:android="http://schemas.android.com/apk/res/android"
     id="cordova-plugin-rawzor-wkwebview-engine"
-    version="1.1.5-dev">
+    version="1.2.0">
     <name>Cordova WKWebView Engine</name>
     <description>Cordova WKWebView Engine Plugin</description>
     <license>Apache 2.0</license>
